[gd_scene load_steps=4 format=3 uid="uid://cixtdt1ar76m7"]

[ext_resource type="Script" path="res://SCENES/UI/card_popup.gd" id="1_iynql"]
[ext_resource type="PackedScene" uid="uid://c8i1b5cm5qr46" path="res://SCENES/UI/card_menu_ui.tscn" id="1_mfuvt"]
[ext_resource type="Theme" uid="uid://dix4diah23n6u" path="res://FONTS AND THEMES/mainTheme.tres" id="2_ol1ru"]

[node name="CardPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iynql")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0588235, 0.027451, 0.0196078, 0.552941)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -32.0
offset_right = 70.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2

[node name="Card" type="CenterContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CardMenuUI" parent="VBoxContainer/Card" instance=ExtResource("1_mfuvt")]
layout_mode = 2

[node name="CardDesc" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_ol1ru")
text = "THIS IS A CARD IT DOES STUFF IT IS VERY AWESOME"
fit_content = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
